crates/keron-lang/tests/corpus/errors/parse/multiline_string_bad_indent.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected `"`, expected expression
  --> 1:11
  |
1 | val bad = """
  |           ^
  = help: write an expression (literal, name, call, or `(…)`).
